[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-staking-mcp-server"
version = "0.1.0"
description = "MCP server for agent reputation staking — trust through skin-in-the-game. Agents stake reputation as collateral; bad behavior gets slashed."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AiAgentKarl", email = "coach1916@gmail.com" }]
keywords = [
    "mcp",
    "agent",
    "staking",
    "reputation",
    "trust",
    "slash",
    "dispute",
    "agent-economy",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet",
]
dependencies = ["mcp[cli]>=1.0.0", "httpx>=0.25.0"]

[project.scripts]
agent-staking-mcp-server = "agent_staking_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/AiAgentKarl/agent-staking-mcp-server"
Repository = "https://github.com/AiAgentKarl/agent-staking-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_staking_mcp_server"]
